--- a/css/free.css
+++ b/css/free.css
@@ -65,12 +65,19 @@ body {
   background-color: #000;
   min-height: 1px;
   padding: 0;
+  color: #fff;
 }
 
 .bg-white {
   background-color: #fff;
   min-height: 1px;
   padding: 0;
+  color: #000;
+}
+
+.bg-black strong,
+.bg-white strong {
+  color: #28a745;
 }
 
 /*
